--- a/samconfig.toml
+++ b/samconfig.toml
@@ -6,6 +6,6 @@ stack_name = "start-stop-linux"
 s3_bucket = "serverless-application-model-nl"
 s3_prefix = "start-stop-linux"
 region = "eu-west-2"
-confirm_changeset = true
+confirm_changeset = false
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "CronSpec=\"cron(0 * * * ? *)\" FuncRuntime=\"nodejs12.x\" FuncRoleName=\"start-stop-ec2\" FuncTimeout=\"30\" FuncMemory=\"128\" FuncTracing=\"Active\""
