--- a/package.json
+++ b/package.json
@@ -1,6 +1,53 @@
 {
-  "name": "Linux",
+  "name": "scheduled-start-stop",
   "version": "1.0.0",
+  "author": {
+    "email": "norbertlogiewa96@gmail.com",
+    "name": "Norbert Logiewa"
+  },
+  "bugs": {
+    "email": "norbertlogiewa96@gmail.com",
+    "url": "https://github.com/nl253/ScheduledStartStop/issues"
+  },
+  "browserslist": [],
+  "contributors": [],
+  "directories": {
+    "lib": "."
+  },
+  "engineStrict": true,
+  "engines": {
+    "node": ">=0.12"
+  },
+  "files": [
+    "*.js",
+    "*.toml",
+    "*.json",
+    "*.yaml",
+    "*.yml"
+  ],
+  "keywords": [
+    "aws",
+    "ec2",
+    "lambda",
+    "cloudwatch",
+    "cloud-computing",
+    "schedule"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nl253/ScheduledStartStop"
+  },
+  "homepage": "https://github.com/nl253/ScheduledStartStop",
+  "description": "AWS lambda that stops instances on a schedule with a specific tag based on the value of the tag.",
+  "main": "index.js",
+  "maintainers": [
+    {
+      "email": "norbertlogiewa96@gmail.com",
+      "name": "Norbert Logiewa"
+    }
+  ],
+  "private": true,
   "dependencies": {
     "aws-sdk": "^2.656.0"
   }
